itemize the list of dockable widgets

--- a/scide.tex
+++ b/scide.tex
@@ -98,11 +98,16 @@ The IDE has a single-window design - it features a single code editing widget at
 used to switch between multiple open documents. The editor widget can also be split horizontally and vertically to show
 more than one document at a time.
 
-Along the edges of the main window, there are \emph{dock areas}, where other \emph{dockable widgets} may be placed: the
-integrated help browser, the language interpreter output widget and the document browser. These widgets can be easily
-drag-and-dropped to different locations in the dock areas, either side-by-side, or stacked on top of each other (with
-tabs appearing to switch among the stacked widgets). They can also be undocked and moved out of the main window, e.g. to
-place them on a second screen or the like.
+Along the edges of the main window, there are \emph{dock areas}, where other \emph{dockable widgets} may be placed:
+\begin{itemize}
+ \item the integrated help browser
+ \item the language interpreter output panel
+ \item the document browser
+\end{itemize}
+
+These widgets can be easily drag-and-dropped to different locations in the dock areas, either side-by-side, or stacked
+on top of each other (with tabs appearing to switch among the stacked widgets). They can also be undocked and moved out
+of the main window (e.g. to place them on a second screen etc.), or simply hidden.
 
 The status bar on the bottom of the main window is used to show the state of the language interpreter and the default
 synthesis server. The server status box is a compact alternative to the SuperCollider server window, showing status
