add conclusions and ideas for future development

--- a/sample.bib
+++ b/sample.bib
@@ -38,6 +38,12 @@
   year        = 2011,
 }
 
+@misc{algoscore,
+  author = "Jonatan Liljedahl",
+  title = "AlgoScore",
+  howpublished = "\url{http://kymatica.com/Software/AlgoScore}",
+  year = 2011
+}
 
 @book{Sal89,
 author={Salton, G.},
