--- a/scide.tex
+++ b/scide.tex
@@ -549,7 +549,9 @@ purpose.
 
 \section{Acknowledgements}
 
-Our thanks go to \ldots .
+The authors would like to thank the vibrant community of SuperCollider developers and users for critical evaluation of
+SuperCollider IDE and many useful insights. With such a productive feedback and intensive involvement in shaping ideas,
+even two lone developers never feel lonely in their efforts. SuperCollider IDE is much better because of you!
 
 \bibliographystyle{acl}
 \bibliography{sample}
