add the screenshot

--- a/scide.tex
+++ b/scide.tex
@@ -3,6 +3,7 @@
 \usepackage{booktabs}
 \usepackage{moreverb}
 \usepackage{url}
+\usepackage{graphicx}
 \sloppy
 \newenvironment{contentsmall}{\small}
 
@@ -147,8 +148,8 @@ information like CPU utilization, number of running synths, groups, synthdefs et
 
 \begin{figure*}[]
   \centering
-  Screenshot
-  \caption{The SuperCollider IDE running on Ubuntu}
+  \includegraphics[width=\textwidth]{overview}
+  \caption{SuperCollider IDE on Ubuntu}
   \label{fig:mainwin}
 \end{figure*}
 
