opt for "audio server" instead of "audio engine"

--- a/scide.tex
+++ b/scide.tex
@@ -172,9 +172,9 @@ The language interpreter is started automatically with the IDE. Nonetheless, it 
 via the main menu or shortcuts, which is useful if code gets stuck in an infinite loop, or the interpreter simply
 crashes and stops by itself.
 
-The audio engine, on the other hand, is not started automatically, but can be quickly started using a shortcut or the
+The audio server, on the other hand, is not started automatically, but can be quickly started using a shortcut or the
 main menu. The menu includes other audio-related actions: to dump the node tree, show sound level meters and the like.
-All these actions may also be accessed via the context menu associated with the audio engine status box (see section
+All these actions may also be accessed via the context menu associated with the audio server status box (see section
 \ref{gui} about the status bar).
 
 \subsection{Code Evaluation}
