remove unnecessary "code" from title

--- a/scide.tex
+++ b/scide.tex
@@ -7,7 +7,7 @@
 \sloppy
 \newenvironment{contentsmall}{\small}
 
-\title{SuperCollider IDE: A Dedicated Integrated Development Environment for SuperCollider code}
+\title{SuperCollider IDE: A Dedicated Integrated Development Environment for SuperCollider}
 
 \author
 {Jakob Leben
