future ideas: don't mention Qt Quick - keep that can of horror sealed

--- a/scide.tex
+++ b/scide.tex
@@ -568,8 +568,7 @@ a great benefit.
 
 GUI creation by users would also benefit from a visual composition approach, as opposed to writing SuperCollider code.
 Moreover, it would be very practical if user-created GUIs could be integrated into the IDE's own GUI, as
-\emph{docklets} (\ref{gui}) or similar. We believe that employing the Qt Quick technology would be a good basis for this
-purpose.
+\emph{docklets} (\ref{gui}) or similar.
 
 
 \section{Acknowledgements}
